[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = ["a <arthur.neves.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
